--- a/gestorescolar/pom.xml
+++ b/gestorescolar/pom.xml
@@ -5,10 +5,19 @@
     <artifactId>gestorescolar</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>gestorescolar</name>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
