--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
             <version>2.8.9</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
