--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,19 @@
             <version>1.0.2</version>
         </dependency>
     </dependencies>
+    <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>src.main.java.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>  
+	</build>
 </project>
